# macron

./: Cargo.toml  README.md
examples/: destiny.rs
src/: macron.rs  main.rs
